fix(tasks-progress-bar): No wrap text

--- a/app/assets/less/components/task-panel/tasks-progress-bar.less
+++ b/app/assets/less/components/task-panel/tasks-progress-bar.less
@@ -12,6 +12,7 @@
 
     &__count {
         position: absolute;
+        white-space: nowrap;
         color: #8c9ea9;
         bottom: 0;
         right: 195px;
